Fix layout bugs, Add content to login modal

--- a/client/src/scss/modules/_form.scss
+++ b/client/src/scss/modules/_form.scss
@@ -54,9 +54,9 @@
 			grid-column-start: 2;
 			grid-row: 2 / span 2;
 			justify-self: center;
-			align-self: center;
+			align-self: end;
 
-			font-size: 1.15rem;
+			font-size: 1.25rem;
 		}
 
 		&:focus {
@@ -75,6 +75,10 @@
 			padding: $padding;
 			margin-top: 0.15rem;
 			box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+
+			&:focus {
+				@include onFocus();
+			}
 		}
 	}
 
@@ -112,17 +116,25 @@
 
 	.error {
 		width: fit-content;
-		margin-top: 1px;
+		margin-top: 2px;
 		padding: 0.25rem;
 		background-color: $advizot-color;
 		clip-path: polygon(
 			0 13%,
-			8% 13%,
+			9% 13%,
 			12% 0,
-			16% 13%,
+			15% 13%,
 			100% 13%,
 			100% 98%,
 			0 98%
 		);
+	}
+	.range-error {
+		width: fit-content;
+		margin-top: 0.55rem;
+		padding: 0.13rem 0.26rem;
+		background-color: $advizot-color;
+
+		grid-row-start: 4;
 	}
 }
